--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,8 @@
     --sidebar-text: #E1F1FF;
     --light-green: #5CF18F;
     --cyan: #2BEFEF;
+    --silver: #C0C0C0;
     --white: #FFFFFF;
+    --light-grey: #909090;
+    --black: #202020;
 }
