--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -16,7 +16,8 @@
 .right-section {
     width: 65%;
     height: auto;
-    padding-left: 3.5rem;
+    padding: 0 4.5rem;
+    position: relative;
 }
 
 @media screen and (max-width: 767px) {
