Progress bar, review page, and global state management using context api is added

--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,6 @@
     --light-grey: #909090;
     --black: #202020;
     --btn-hover: #22343F;
+    --red: #FF1515;
+    --progress-color: #FFAC30;
 }
