--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -4,6 +4,8 @@
     background-color: var(--dark-blue);
     border-radius: 0 1rem 1rem 0;
     height: 100vh;
+    position: relative;
+    overflow: hidden;
 }
 
 /* Inner container of sidebar */
@@ -14,6 +16,7 @@
     align-items: flex-start;
     justify-content: flex-start;
     gap: 0.8rem;
+    position: relative;
 }
 
 /* Sidebar title */
@@ -69,7 +72,8 @@
 
     /* Inner container of sidebar */
     .container {
-        padding: 1.5rem 1rem 2rem 2rem;
+        padding: 1.5rem 1rem 3rem 2rem;
+        gap: 0.1rem;
         align-items: center;
         justify-content: center;
     }
@@ -83,5 +87,97 @@
     .container .subtitle {
         font-size: 0.75rem;
         text-align: center;
+    }
+}
+
+/* Progress Bar styling */
+.progress {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-25%, 25%);
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    color: var(--white);
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    letter-spacing: 0.1113rem;
+}
+
+.progress div {
+    position: relative;
+}
+
+.progress div::before {
+    content: '';
+    height: 1rem;
+    width: 1rem;
+    display: inline-block;
+    margin-right: 1rem;
+    border-radius: 50%;
+    color: var(--white);
+    background: var(--white);
+}
+
+.progress div::after {
+    content: '';
+    height: 3rem;
+    width: 0.15rem;
+    display: flex;
+    margin-left: 0.4rem;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    color: var(--white);
+    margin-top: -0.35rem;
+    background: var(--white);
+}
+
+.progress div:last-child::after {
+    display: none;
+}
+
+.progress .currentStep::after,
+.progress .currentStep::before {
+    background-color: var(--progress-color);
+}
+
+.progress .currentStep {
+    color: var(--progress-color);
+}
+
+@media screen and (max-width: 767px) {
+    .progress {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        gap: 2rem;
+        top: 80%;
+        right: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 0.75em;
+    }
+
+    .progress div {
+        position: relative;
+        text-align: center;
+    }
+
+    .progress div::before {
+        height: 0;
+        width: 0;
+    }
+
+    .progress div::after {
+        height: 0;
+        width: 0;
+    }
+}
+@media screen and (max-width: 545px) {
+    .progress {
+        font-size: 0.6rem;
     }
 }
